--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <>
+   <head>
+
+   </head>
+   <body>
+
+   </body>
+   <footer>
+
+   </footer>
+    
 
 </html>
