--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-   <head>
+    <head>
+      <!-- USED BY KEYBOAWD -->
+      <meta charset="utf-8"
+      <title>tittle splash page</title>
+    </head>
+    <body>
 
-   </head>
-   <body>
+    </body>
+    <footer>
 
-   </body>
-   <footer>
-
-   </footer>
+    </footer>
     
 
 </html>
