--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
     <head>
       <!-- USED BY KEYBOAWD -->
-      <meta charset="utf-8"
-      <title>tittle splash page</title>
+     <meta charset="utf-8"> 
+     <title>Spwash Page UwU</title>
     </head>
     <body>
 
