--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-      <!-- USED BY KEYBOAWD -->
+      <!-- USED BY KEYBOArD -->
      <meta charset="utf-8"> 
      <title>Spwash Page UwU</title>
+     <!-- used by good ol google chromium-->
+     <meta name="author" content="Lily Anne Buckingham">
+     <meta name="description" content="learning html using owospeak">
+     <meta name="keywords" content="Learning, html, boilerplate, starter, owospeak">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     
     </head>
     <body>
 
