--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
      <meta name="description" content="learning html using owospeak">
      <meta name="keywords" content="Learning, html, boilerplate, starter, owospeak">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     
+     <noscript>Running javascript isn't necessary in HTML. If you continue to attempt to run javascript, I will cry. Also you javascript feature is off L bozo.</noscript>
+
     </head>
     <body>
 
