--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
       <!-- USED BY KEYBOArD -->
      <meta charset="utf-8"> 
      <title>Spwash Page UwU</title>
+     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+     <!-- favicon thing https://www.w3schools.com/howto/howto_html_favicon.asp -->
      <!-- used by good ol google chromium-->
      <meta name="author" content="Lily Anne Buckingham">
-     <meta name="description" content="learning html using owospeak">
-     <meta name="keywords" content="Learning, html, boilerplate, starter, owospeak">
+     <meta name="description" content="learning html using owospeak as a personal choice">
+     <meta name="keywords" content="learning, html, boilerplate, starter, owospeak">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <noscript>Running javascript isn't necessary in HTML. If you continue to attempt to run javascript, I will cry. Also you javascript feature is off L bozo.</noscript>
-
+    
     </head>
     <body>
 
