--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta charset="utf-8"> 
      <title>Spwash Page UwU</title>
      <!-- favicon thing https://www.w3schools.com/howto/howto_html_favicon.asp -->
-     <!-- vvv used by good ol google chromium vvv-->
+     <!--VV used by good ol google chromium VV-->
      <meta name="author" content="Lily Anne Buckingham">
      <meta name="description" content="learning html using owospeak as a personal choice">
      <meta name="keywords" content="learning, html, boilerplate, starter, owospeak">
@@ -15,13 +15,14 @@
     </head>
     <!-- what the goddamn is a semantic tag-->
     <body>
-      <header></header>
-      <nav></nav>
-      <aside></aside>
-      <section></section>
-      <main></main>
-      <article></article>
-      <footer></footer>
+      <div>dividion</div>
+      <header>header</header>
+      <nav>navigation</nav>
+      <aside>aside space supports main</aside>
+      <section>section</section>
+      <main>improtantantntntmnt</main>
+      <article>article</article>
+      <footer>footre</footer>
 
     </body>
     <footer>
@@ -31,7 +32,7 @@
       <p><strong>"Before you criticize someone, you should walk a mile in their shoes. That way when you critisize them, you are a mile away and you have their shoes."</strong>
         <em>-Jack Handey</em></p>
         <p>&copy powered by SINAMINANIM on Github.</p>
-      <!-- other info like visitors, location, contact information, etc.-->
+      <!--VV other info like visitors, location, contact information, etc. VV-->
       
 
     </footer>
