--- a/index.html
+++ b/index.html
@@ -10,17 +10,54 @@
      <meta name="description" content="learning html using owospeak as a personal choice">
      <meta name="keywords" content="learning, html, boilerplate, starter, owospeak">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <style>
+      * {
+            box-sizing: border-box;
+            font-size: 2vw;
+        }
+      div { //border: thin dotted red;}
+     header { 
+       border: 3px solid blueviolet;
+       padding: 12px;
+       font-size: 4vw;
+
+     }
+      nav { width: 25%;
+            float: left;
+            padding: 12px;
+            border: 3px solid rgb(0,100,160);
+            }
+      aside { width: 25%;
+              float: left;
+              padding: 12px;
+              border: 3px solid brown;}
+      section { width: 
+
+      }
+      main { width: 25%;
+            float: left;
+            padding: 12px;
+            border: 3px solid rgb(69,0,142);
+          }
+      article {}
+      footer { padding: 12px;
+               border: 3px solid royalblue;} 
+
+     </style>
+
      <noscript>Running javascript isn't necessary in HTML. If you continue to attempt to run javascript, I will cry. Also you javascript feature is off L bozo.</noscript>
     
+     <!--websites load in a sppecific order and are really fucking slow-->
     </head>
     <!-- what the goddamn is a semantic tag-->
     <body>
       <div>dividion</div>
       <header>header</header>
       <nav>navigation</nav>
+      <main>improtantantntntmnt</main>
       <aside>aside space supports main</aside>
       <section>section</section>
-      <main>improtantantntntmnt</main>
       <article>article</article>
       <footer>footre</footer>
 
