--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <!-- USED BY KEYBOArD -->
      <meta charset="utf-8"> 
-     <title>Spwash Page UwU</title>
+     <title>html music promo website</title>
      <!-- favicon thing https://www.w3schools.com/howto/howto_html_favicon.asp -->
      <!--VV used by good ol google chromium VV-->
      <meta name="author" content="Lily Anne Buckingham">
@@ -21,15 +21,17 @@
        border: 3px solid blueviolet;
        padding: 12px;
        font-size: 4vw;
+       font-family: sans-serif;
 
      }
       nav { width: 25%;
             float: left;
             padding: 12px;
             border: 3px solid rgb(0,100,160);
+            font-family: sans-serif;
             }
       aside { width: 25%;
-              float: left;
+              float: right;
               padding: 12px;
               border: 3px solid brown;}
       section { width: 
@@ -39,9 +41,16 @@
             float: left;
             padding: 12px;
             border: 3px solid rgb(69,0,142);
+            font-family: sans-serif;
           }
-      article {}
-      footer { padding: 12px;
+      article { width: 12%;
+                float: left;
+                padding: 5px;
+                border: 3px solid green;
+      }
+      footer { width: 50%;
+               float: left;
+               padding: 12px;
                border: 3px solid royalblue;} 
 
      </style>
@@ -53,13 +62,13 @@
     <!-- what the goddamn is a semantic tag-->
     <body>
       <div>dividion</div>
-      <header>header</header>
-      <nav>navigation</nav>
-      <main>improtantantntntmnt</main>
-      <aside>aside space supports main</aside>
+      <header>Music PLayer promo</header>
+      <nav>where to go</nav>
+      <main>M E A T</main>
+      <aside>quick fct or whatevr</aside>
       <section>section</section>
-      <article>article</article>
-      <footer>footre</footer>
+      <article>thing</article>
+      <footer>disclaimer, note, please don open code it make me very sad :'(</footer>
 
     </body>
     <footer>
