--- a/index.html
+++ b/index.html
@@ -16,42 +16,61 @@
             box-sizing: border-box;
             font-size: 2vw;
         }
-      div { //border: thin dotted red;}
+      div { 
+        border: thin dotted red;
+      }
+
      header { 
-       border: 3px solid blueviolet;
-       padding: 12px;
+       border: 2px solid blueviolet;
+       padding: 10px;
        font-size: 4vw;
        font-family: sans-serif;
-
      }
-      nav { width: 25%;
-            float: left;
-            padding: 12px;
-            border: 3px solid rgb(0,100,160);
-            font-family: sans-serif;
-            }
-      aside { width: 25%;
-              float: right;
-              padding: 12px;
-              border: 3px solid brown;}
-      section { width: 
 
+      nav { 
+        width: 25%;
+        float: left;
+        padding: 10px;
+        border: 2px solid rgb(0,100,160);
+        font-family: sans-serif;
+     }
+
+      aside { 
+        width: 25%;
+        float: left;
+        padding: 10px;
+        border: 2px solid brown;
+        font-family: sans-serif;
       }
-      main { width: 25%;
-            float: left;
-            padding: 12px;
-            border: 3px solid rgb(69,0,142);
-            font-family: sans-serif;
+
+      section { 
+        width: 50%;
+        float: left;
+        border: 2px solid yellowgreen;
+        padding: 10px;
+      }
+
+      main { 
+        width: 50%;
+        float: left;
+        padding: 10px;
+        border: 2px solid rgb(69,0,142);
+        font-family: sans-serif;
           }
-      article { width: 12%;
-                float: left;
-                padding: 5px;
-                border: 3px solid green;
+
+      article { 
+        width: 50%;
+        float: left;
+        padding: 10px;
+        border: 2px solid green;
       }
-      footer { width: 50%;
-               float: left;
-               padding: 12px;
-               border: 3px solid royalblue;} 
+
+      footer { 
+        width: 50%;
+        float: left;
+        padding: 10px;
+        border: 2px solid royalblue;
+      } 
 
      </style>
 
@@ -60,19 +79,23 @@
      <!--websites load in a sppecific order and are really fucking slow-->
     </head>
     <!-- what the goddamn is a semantic tag-->
-    <body>
+     <body>
       <div>dividion</div>
-      <header>Music PLayer promo</header>
-      <nav>where to go</nav>
-      <main>M E A T</main>
-      <aside>quick fct or whatevr</aside>
-      <section>section</section>
-      <article>thing</article>
-      <footer>disclaimer, note, please don open code it make me very sad :'(</footer>
+      <div><header class="header">Music Player promo</header></div>
+      <div><nav class="nav">where to go</nav></div>
+      <div><main class="main">M E A T</main></div>
+      <div><aside class="aside">quick fact</aside></div>
+
+    <div>
+      <section class="main">section</section>
+      <article class="main">thing</article>
+      </div>
+
+     <footer class="footer">disclaimer, note, please don open code it make me very sad T.T</footer>
 
     </body>
     <footer>
-      <blockquote cite=""> 
+      <blockquote cite="https://parade.com/940913/parade/funny-quotes/"> 
       <!-- date accessed 2024 feb 14-->
       </blockquote>
       <p><strong>"Before you criticize someone, you should walk a mile in their shoes. That way when you critisize them, you are a mile away and you have their shoes."</strong>
