--- a/experimental/index.html
+++ b/experimental/index.html
@@ -82,13 +82,30 @@
      <body>
 
       <div></div>
-      <header class="header">Experimental header and paragraghing</header>
-      <nav class="nav">Nav H-Tags</nav>
+      <header class="header">
+        <h1>Experimental header and paragragh tags</h1>
+        <h1>H1; text</h1>
+        <h2>H2; text</h2>
+        <h3>H3; text</h3>
+        <h4>H4; text</h4>
+        <h5>H5; text</h5>
+        <h6>H6; text</h6>
+        <h7>H7; text</h7>
+      </header>
+      <nav class="nav">Nav H-Tags
+        H1; text
+        H2; text
+        H3; text
+        H4; text
+        H5; text
+        H6; text
+        H7; text
+      </nav>
       <main class="main">Main H-Tags</main>
       <aside class="aside">Aside H-Tags</aside>
       <section class="main">Section H-Tags</section>
       <article class="main">Article H-Tags</article>
-      <footer class="footer">disclaimer, note, please don open code it makes me very sad T.T</footer>
+      <footer class="footer">Footer H-Tags</footer>
 
     </body>
 
