--- a/experimental/bweebwee.html
+++ b/experimental/bweebwee.html
@@ -14,7 +14,7 @@
      <style>
       * {
             box-sizing: border-box;
-            font-size: 2vw;
+            //font-size: 2vw;
         }
       div { 
         //border: thin dotted red;
@@ -23,7 +23,7 @@
      header { 
        border: 2px solid blueviolet;
        padding: 10px;
-       font-size: 4vw;
+       //font-size: 4vw;
        font-family: sans-serif;
      }
 
@@ -48,6 +48,7 @@
         float: left;
         border: 2px solid yellowgreen;
         padding: 10px;
+        font-family: sans-serif;
       }
 
       main { 
@@ -63,13 +64,15 @@
         float: left;
         padding: 10px;
         border: 2px solid green;
+        font-family: sans-serif;
       }
 
       footer { 
-        width: 50%;
+        width: 100%;
         float: left;
         padding: 10px;
         border: 2px solid royalblue;
+        font-family: sans-serif;
       } 
 
      </style>
@@ -83,7 +86,56 @@
 
       <div></div>
       <header class="header">
-        <h1>Experimental header and paragragh tags</h1>
+        <h1>Experimental Beasts</h1>
+        <h3>H3; and where to code them</h3>
+        <h7>H7; a parody by yours truly</h7>
+        <p>pargraphical tagging; any wordses</p>
+      </header>
+      <nav class="nav">
+        <h2>largest h tag in nav, nav h-tags in h2</h2>
+        <h3>H3; text</h3>
+        <h4>H4; text</h4>
+        <h5>H5; text</h5>
+        <h6>H6; text</h6>
+        <h7>H7; text</h7>
+        <p>pargraphical tagging</p>
+        <a>hyperlink, only text in tags</a>
+      </nav>
+      <main class="main">
+        <h1>main h-tags in h1</h1>
+        <h2>H2; text</h2>
+        <h3>H3; text</h3>
+        <h4>H4; text</h4>
+        <h5>H5; text</h5>
+        <h6>H6; text</h6>
+        <h7>H7; text</h7>
+        <p>pargraphical tagging</p>
+        <section class="main">
+          <h2>sections htags in h2</h2>
+          <h3>subtitle usually stops here, you can use strong if youd like bolding</h3>
+          <p>do whatever u want its a section lmao</p>
+          <a>hypelrinking</a>
+        </section>
+      </main>
+      <aside class="aside">Aside H-Tags
+        <h2>H2; largest text tag</h2>
+        <h3>H3; text</h3>
+        <h4>H4; text</h4>
+        <h5>H5; text</h5>
+        <h6>H6; text</h6>
+        <p>pargraphical tagging</p>
+      </aside>
+      
+      <article class="main">Article H-Tags
+        <h2>H2; text</h2>
+        <h3>H3; text</h3>
+        <h4>H4; text</h4>
+        <h5>H5; text</h5>
+        <h6>H6; text</h6>
+        <h7>H7; text</h7>
+        <p>pargraphical tagging</p>
+      </article>
+      <footer class="footer">Footer H-Tags
         <h1>H1; text</h1>
         <h2>H2; text</h2>
         <h3>H3; text</h3>
@@ -91,21 +143,8 @@
         <h5>H5; text</h5>
         <h6>H6; text</h6>
         <h7>H7; text</h7>
-      </header>
-      <nav class="nav">Nav H-Tags
-        H1; text
-        H2; text
-        H3; text
-        H4; text
-        H5; text
-        H6; text
-        H7; text
-      </nav>
-      <main class="main">Main H-Tags</main>
-      <aside class="aside">Aside H-Tags</aside>
-      <section class="main">Section H-Tags</section>
-      <article class="main">Article H-Tags</article>
-      <footer class="footer">Footer H-Tags</footer>
+        <p>pargraphical tagging</p>
+      </footer>
 
     </body>
 
