--- a/index.html
+++ b/index.html
@@ -114,10 +114,16 @@
       </nav>
 
       <main class="main">
-        main part \ o w o / (importananant)</main>
+        Greetings and salutations, friend! Welcome to my wonderful and amazing website, that proves that my music player is one-of-a-kind and the best around! 
+        This website also provides at least 3 WHOLE SOURCES on why I am trustworthy and would never lie to you for monetary profit. I have both of our best best interests in mind, friend! 
+        Always remember this. Aaaanyways~ would you happen to have around, say, 400 dollars, no reason, just wondering. 
+        If you did have the money to spare, though, I'm sure I could give you a most splendiferous gift, for my most splendiferous companion. I would assuredly NOt spend the money on frivolous, selfish things, 
+        like consumables, or crypto. Unless, of course, you would wish for those yourself, in which case I would bestow them upon you with haste. Perchance.
+      </main>
 
       <aside class="aside">
         aside to the side
+        <br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
       </aside>
 
     <div>
