--- a/index.html
+++ b/index.html
@@ -127,11 +127,13 @@
       </aside>
 
     <div>
-      <section class="main">perhaps i should find a different font family for different sections of the page, such as nav being more smooth, or main being more poppy</section>
-      <article class="main">...nah this is fine for now. ill just make the main text bright red and the background black, thatll work well enough for my purposes.</article>
+      <section class="main">
+        perhaps i should find a different font family for different sections of the page, such as nav being more smooth, or main being more poppy</section>
+      <article class="main">
+        ...nah this is fine for now. ill just make the main text bright red and the background black, thatll work well enough for my purposes.</article>
       </div>
 
-     <footer class="footer">disclaimer, note, please don open code it make me very sad T.T</footer>
+     <footer class="footer">disclaimer, note, please don open code it make me very sad TT~TT</footer>
 
     </body>
     <footer>
