--- a/child pages/images.html
+++ b/child pages/images.html
@@ -3,7 +3,7 @@
     <head>
       <!-- USED BY KEYBOArD -->
      <meta charset="utf-8"> 
-     <title>child temp</title>
+     <title>imagises</title>
      <!-- favicon thing https://www.w3schools.com/howto/howto_html_favicon.asp -->
      <!--VV used by good ol google chromium VV-->
      <meta name="author" content="Lily Anne Buckingham">
@@ -21,6 +21,7 @@
           text-align: center;
         }
       div { 
+        border: thin dotted red;
         color: black;
       }
 
@@ -97,7 +98,7 @@
         <h7>H7; wished away (as if it ever existed)</h7>
         <p>pargraphical tagging; any wordses</p>
       </header>
-      <nav class="nav">
+       <nav class="nav">
         <h3 style="text-align: center;">largest is h2, nav uses h3</h3>
         <!--hyperlinks do not have formatting, use unorganized or organized lists-->
         <ul style="list-style-type: none;">
@@ -115,22 +116,35 @@
           <li> what each page will look like when blank: <a href="" target="_blank">Child Template Page</a></li>
         </ul>
         <p>use the docmap </p>
-      </nav>
-      <main class="main">
-        <h1>main h-tags in h1</h1>
-        <h2>H2; text</h2>
-        <h3>H3; text</h3>
-        <p>pargraphical tagging.</p>
+       </nav>
+       <main class="main">
+        <h1>steps for creating an image</h1>
+        <p>
+           <ol style="type=I;">
+             <li></li>
+             <li></li>
+             <li></li>
+           </ol>
+        </p>
+         <p>
+          <img src="" alt="" title="in stars and time brainrot" style="max-width:25%;height:auto;">
+          <!--Will size to a max with of Width 1300, height 606, but not bigger-->
+          <!--Play with percentages-->
+         </p>
+         <p>
+          <img src="" alt="" title="in stars and time brainrot" style="max-width:25%;height:auto;">
+         </p>
+         <p>
+          <img src="" alt="" title="in stars and time brainrot" style="max-width:25%;height:auto;">
+         </p>
+         <p>
+          <img src="" alt="" title="in stars and time brainrot" style="max-width:25%;height:auto;">
+         </p>
            <section class="main">
              <h2>sections htags in h2</h2>
              <h3>subtitle usually stops here, you can use strong if youd like bolding</h3>
              <p>paragraphs can hold different types of <sup>large</sup> and <sub>small</sub> writing. For additional examples,  the formula for Sodium Phosphide is Na<sub>3</sub>P, and 4<sup>2</sup> equals 16.</p>
              <a>hypelrinking</a>
-                <article class="main">Article in Section in Main
-                 <h3>H3; text</h3>
-                 <h4>H4; text</h4>
-                 <p>paragraphical taggings.</p>
-                </article>
            </section>
                <article class="main">Article H-Tags
                 <h2>H2; text</h2>
@@ -138,15 +152,20 @@
                 <h4>H4; text</h4>
                 <p>pargraphical tagging. text only for p tags in articles.</p>
                </article>
-      </main>
+       </main>
+
       <aside class="aside">Aside H-Tags
-        <h2>H2; largest text tag</h2>
-        <h3>H3; text</h3>
-        <h4>H4; text</h4>
-        <h5>H5; text</h5>
+        <h2>image info</h2>
+        <p>
+          Image #1 Loop from In Stars And Time <a href="" tagret="_blank">find where it lives</a>
+        </p>
+        <p>
+          Image #2 Pixilart Tree In A Pot <a href="" tagret="_blank">find where it lives</a>
+        </p>
         <p>pargraphical tagging.</p>
         <br></br><br></br><br></br><br></br><br></br><br></br>
       </aside>
+
       <section class="main">
         <h2>sections htags in h2</h2>
         <h3>subtitle usually stops here, you can use strong if youd like bolding</h3>
@@ -162,6 +181,7 @@
         <h4>H4; text</h4>
         <p>pargraphical tagging. text only for p tags in articles.</p>
       </article>
+
       <footer class="footer" style="text-align: center;">Footer H-Tags
         <h1>H1; text</h1>
         <h2>H2; text</h2>
