commit to the bit

--- a/child pages/images.html
+++ b/child pages/images.html
@@ -95,37 +95,51 @@
       <header class="header">
         <h1>Images</h1>
         <h2 style="text-align: center;">Be sure to open in a wysiwyg and a browser</h2>
-        <h7>H7; wished away (as if it ever existed)</h7>
-        <p>pargraphical tagging; any wordses</p>
       </header>
        <nav class="nav">
         <h3 style="text-align: center;">largest is h2, nav uses h3</h3>
         <!--hyperlinks do not have formatting, use unorganized or organized lists-->
         <ul style="list-style-type: none;">
           <!--none removes the symbol for list items-->
-          <li> loop back: <a href="../index.html" target="_blank">Home Page</a></li>
-          <br></br>
+          <li> start again: <a href="../index.html" target="_blank">Home Page</a></li>
+          <br>
           <li> what should each page have: <a href="" target="_blank">MetaData</a></li>
-          <br></br>
+          <br>
           <li> what is possible with text: <a href="" target="_blank">Text Experimental Page</a></li>
-          <br></br>
+          <br>
           <li> a more powerful way of using font size in viewport: <a href="" target="_blank">Viewport Units 1-6</a></li>
-          <br></br>
+          <br>
           <li> what an image looks like: <a href="" target="_blank">Images lesson</a></li>
-          <br></br>
+          <br>
           <li> what each page will look like when blank: <a href="" target="_blank">Child Template Page</a></li>
         </ul>
-        <p>use the docmap </p>
+        <p>Use a text edittor to craft white text for the nav items.</p>
+        <p>Use "ol" with style="type=1|a|A|i|I;" if want numbered pages</p>
+        <p>Remember, the layout of li-tags & a-tags creates high contract with
+        hyperlinked colour text. 
+        Some viewers struggle with low contrast text and colours.
+        </p>
+        <p>CAUTION: Use the DOC-Map to craft all the pages, using file names in childTemplate before creating the actual files.
+        This will COPY/PASTE childTemplate to new pages with the same NAV Layout. 
+        </p>
+        
        </nav>
        <main class="main">
         <h1>steps for creating an image</h1>
+        <br>
         <p>
            <ol style="type=I;">
-             <li></li>
-             <li></li>
-             <li></li>
+             <li>pick an image</li>
+             <li>open image in new tab until url ends with image file extension (jpg, jpeg, png, gif, avif)</li>
+             <li>
+               <!-- Note: use of white space below for only one line in rendered page -->
+               Record URL,
+               Cite,
+               and comment for date accessed
+             </li>
            </ol>
         </p>
+        <br><br><br>
          <p>
           <img src="" alt="" title="in stars and time brainrot" style="max-width:25%;height:auto;">
           <!--Will size to a max with of Width 1300, height 606, but not bigger-->
@@ -143,50 +157,41 @@
            <section class="main">
              <h2>sections htags in h2</h2>
              <h3>subtitle usually stops here, you can use strong if youd like bolding</h3>
-             <p>paragraphs can hold different types of <sup>large</sup> and <sub>small</sub> writing. For additional examples,  the formula for Sodium Phosphide is Na<sub>3</sub>P, and 4<sup>2</sup> equals 16.</p>
+             <p>paragraphs can hold different types of <sup>large</sup> and <sub>small</sub> writing. 
+              For additional examples,  the formula for Sodium Phosphide is Na<sub>3</sub>P, 
+              and 4<sup>2</sup> equals 16.</p>
              <a>hypelrinking</a>
            </section>
-               <article class="main">Article H-Tags
+               <article class="main">
                 <h2>H2; text</h2>
-                <h3>H3; text</h3>
-                <h4>H4; text</h4>
-                <p>pargraphical tagging. text only for p tags in articles.</p>
+                <br><br><br><br><br><br><br><br><br><br><br>
                </article>
        </main>
 
-      <aside class="aside">Aside H-Tags
-        <h2>image info</h2>
+      <aside class="aside">
+        <h2>Image Information</h2>
         <p>
-          Image #1 Loop from In Stars And Time <a href="" tagret="_blank">find where it lives</a>
+          Image #1 
         </p>
-        <p>
-          Image #2 Pixilart Tree In A Pot <a href="" tagret="_blank">find where it lives</a>
-        </p>
-        <p>pargraphical tagging.</p>
-        <br></br><br></br><br></br><br></br><br></br><br></br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </aside>
 
       <section class="main">
         <h2>sections htags in h2</h2>
         <h3>subtitle usually stops here, you can use strong if youd like bolding</h3>
-        <h4>um uh hmmmmm</h4>
-        <p>do whatever u want its a section lmao. putting more text to pad this a bit.</p>
+        <p>do whatever u want its a section lmao.</p>
         <a>hypelrinking</a>
         <br></br>
       </section>
       
-      <article class="main">Article H-Tags
+      <article class="main">
         <h2>H2; text</h2>
-        <h3>H3; text</h3>
-        <h4>H4; text</h4>
-        <p>pargraphical tagging. text only for p tags in articles.</p>
+        <br><br><br>
       </article>
 
       <footer class="footer" style="text-align: center;">Footer H-Tags
-        <h1>H1; text</h1>
         <h2>H2; text</h2>
-        <h3>H3; text</h3>
-        <p>pargraphical tagging</p>
       </footer>
 
     </body>
