--- a/index.html
+++ b/index.html
@@ -114,26 +114,37 @@
       </nav>
 
       <main class="main">
-        Greetings and salutations, friend! Welcome to my wonderful and amazing website, that proves that my music player is one-of-a-kind and the best around! 
-        This website also provides at least 3 WHOLE SOURCES on why I am trustworthy and would never lie to you for monetary profit. I have both of our best best interests in mind, friend! 
-        Always remember this. Aaaanyways~ would you happen to have around, say, 400 dollars, no reason, just wondering. 
+        <h1>Greetings and salutations, friend!</h1> <p>Welcome to my wonderful and amazing website, that proves that my music player is one-of-a-kind and the best around!</p>
+        <br>
+        <p>This website also provides at least 3 WHOLE SOURCES on why I am trustworthy and would never lie to you for monetary profit. 
+        I have both of our best best interests in mind, friend! 
+        Always remember this.</p>
+        <br><br>
+        <p>Aaaanyways~ would you happen to have around, say, 400 dollars, no particular reason, just wondering. 
         If you did have the money to spare, though, I'm sure I could give you a most splendiferous gift, for my most splendiferous companion. I would assuredly NOt spend the money on frivolous, selfish things, 
-        like consumables, or crypto. Unless, of course, you would wish for those yourself, in which case I would bestow them upon you with haste. Perchance.
+        like consumables, or crypto.</p>
+        <br>
+        <p>Unless, of course, you would wish for those yourself, in which case I would bestow them upon you with haste. Perchance.</p>
+        <br><br>
       </main>
 
       <aside class="aside">
         aside to the side
-        <br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </aside>
 
-    <div>
-      <section class="main">
-        perhaps i should find a different font family for different sections of the page, such as nav being more smooth, or main being more poppy</section>
+        <section class="main">
+         <h3>perhaps i should find a different font family for different parts of the page</h3>
+         <br>
+        </section>
       <article class="main">
-        ...nah this is fine for now. ill just make the main text bright red and the background black, thatll work well enough for my purposes.</article>
-      </div>
+        <h3>...nah this is fine for now. ill just make the main text bright red and the background black, thatll work well enough for my purposes.</h3>
+      </article>
 
-     <footer class="footer">disclaimer, note, please don open code it make me very sad TT~TT</footer>
+     <footer class="footer">
+      <h2>note, this code makes me very sad TT~TT</h2>
+     </footer>
 
     </body>
     <footer>
