--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
          <br>
         </section>
       <article class="main">
-        <h3>...nah this is fine for now. ill just make the main text bright red and the background black, thatll work well enough for my purposes.</h3>
+        <h3>...nah this is fine for now</h3>
       </article>
 
      <footer class="footer">
